--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
 
     //Mockito
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:x2.2.0"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation "android.arch.core:core-testing:1.1.1"
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -69,4 +69,18 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+//    // Koin Core features
+//    implementation "io.insert-koin:koin-core:3.2"
+//// Koin Test features
+//    testImplementation "io.insert-koin:koin-test:3.2"
+//// Koin main features for Android
+//    implementation "io.insert-koin:koin-android:3.2"
+//// No more koin-android-viewmodel, koin-android-scope, koin-android-fragment
+//
+//// Java Compatibility
+//    implementation "io.insert-koin:koin-android-compat:3.2"
+//// Jetpack WorkManager
+//    implementation "io.insert-koin:koin-androidx-workmanager:3.2"
+//// Navigation Graph
+//    implementation "io.insert-koin:koin-androidx-navigation:3.2"
 }
