--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".MyApp"
         android:theme="@style/Theme.CountryAPI">
-        <activity android:name=".view.CountryDetailActivity" />
-        <activity android:name=".view.CountryActivity"
+        <activity android:name=".presentation.CountryDetailActivity" />
+        <activity android:name=".presentation.CountryActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
